# nonebot-plugin-prometheus

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: issue.yml
.github/actions/setup-python/: action.yml
.github/workflows/: release-draft.yml  release-trigger.yml  release.yml  release_trigger.yml
nonebot_plugin_prometheus/: __init__.py  api.py  config.py  extension.py  formatter.py  metrics.py  query.py  registry.py  utils.py
nonebot_plugin_prometheus/matcher/: metrics_query.py  test_matcher.py
