[project]
name = "nonebot-plugin-prometheus"
version = "0.2.5"
description = "nonebot-plugin-prometheus"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "nonebot2>=2.2.1",
    "prometheus-client>=0.21.1",
]

[tool.nonebot]
adapters = [

]
plugins = ["nonebot_plugin_prometheus"]
plugin_dirs = []
builtin_plugins = []

[dependency-groups]
dev = [
    "nonebot2[fastapi]>=2.2.1",
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["nonebot_plugin_prometheus"]

[tool.hatch.build.targets.sdist]
only-include = ["nonebot_plugin_prometheus"]
